--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ResetPassword.de.resx
@@ -137,7 +137,7 @@
     <value>Der Link zum zurücksetzen des Passworts wurde an {0} gesendet.</value>
   </data>
   <data name="sent_Timeout" xml:space="preserve">
-    <value>Passwort Zurücksetzungs Link kann nicht gesendet werden</value>
+    <value>An diesen Benutzer wurde bereits eine Passwort Zurücksetzen E-Mail gesendet. Versuchen Sie es in {0} nochmal.</value>
   </data>
   <data name="resetForm_ConfirmedPassword_NotMatch" xml:space="preserve">
     <value>Das neue Passwort und das Bestätigte Passwort stimmen nicht überein.</value>
