--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ConfirmEmail.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Auth/ConfirmEmail.en.resx
@@ -97,52 +97,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="title" xml:space="preserve">
-    <value>reset Password</value>
-  </data>
-  <data name="userForm_User" xml:space="preserve">
-    <value>Email address or username</value>
-  </data>
-  <data name="userForm_SubmitBtn" xml:space="preserve">
-    <value>reset Password</value>
-  </data>
-  <data name="userForm_User_NotFound" xml:space="preserve">
-    <value>The specified user could not be found.</value>
-  </data>
-  <data name="sendMailBtn" xml:space="preserve">
-    <value>Send link</value>
-  </data>
-  <data name="resetForm_SubmitBtn" xml:space="preserve">
-    <value>reset Password</value>
-  </data>
-  <data name="success" xml:space="preserve">
-    <value>The password reset was successful.</value>
-  </data>
-  <data name="error" xml:space="preserve">
-    <value>Error resetting password</value>
-  </data>
-  <data name="resetForm_NewPassword" xml:space="preserve">
-    <value>New Password</value>
-  </data>
-  <data name="resetForm_ConfirmedPassword" xml:space="preserve">
-    <value>Confirm new password</value>
-  </data>
-  <data name="sendMailText" xml:space="preserve">
-    <value>To reset your account password, a link to reset your password will be sent to the email address stored in your account.</value>
-  </data>
-  <data name="userForm_Text" xml:space="preserve">
-    <value>Please enter the email address or username of the user whose password you want to reset.</value>
-  </data>
-  <data name="sent" xml:space="preserve">
+  <data name="sentEmail" xml:space="preserve">
     <value>The password reset link has been sent to {0}.</value>
   </data>
-  <data name="sent_Timeout" xml:space="preserve">
-    <value>A password reset email has already been sent to this user. Please try again at {0}.</value>
+  <data name="sentEmail_Timeout" xml:space="preserve">
+    <value>A confirmation email has already been sent to this user. Please try again at {0}.</value>
   </data>
-  <data name="resetForm_ConfirmedPassword_NotMatch" xml:space="preserve">
-    <value>The new password and the confirmed password do not match.</value>
+  <data name="title" xml:space="preserve">
+    <value>Confirm account email</value>
   </data>
-  <data name="form_NotEmpty" xml:space="preserve">
-    <value>The field must not be empty</value>
+  <data name="sendLinkBtn" xml:space="preserve">
+    <value>Send confirmation email</value>
+  </data>
+  <data name="confirmError" xml:space="preserve">
+    <value>An error occurred during verification.</value>
+  </data>
+  <data name="confirmText" xml:space="preserve">
+    <value>To confirm the email address, a confirmation link will be sent to the account email address.</value>
   </data>
 </root>
