Added pages to view every login attempt and a detailed view -Feature: Added a page to show every login attempt. -Feature: Added a page to view a login attempt in detail. -Refactor: Renamed an enum. -Fix: Fixed a bug in SchulCloudUserStore.RemoveLoginAttemptAsync.

--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Layouts/PageLayouts/AccountSecurityLayout.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Layouts/PageLayouts/AccountSecurityLayout.de.resx
@@ -109,4 +109,7 @@
   <data name="tabSecurityKeys" xml:space="preserve">
     <value>Sicherheitsschlüssel</value>
   </data>
+  <data name="tabLogInAttempts" xml:space="preserve">
+    <value>Anmeldeverlauf</value>
+  </data>
 </root>
