--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/LoginAttempts.en.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/LoginAttempts.en.resx
@@ -97,19 +97,79 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="tabOverview" xml:space="preserve">
-    <value>Overview</value>
-  </data>
-  <data name="tabHeader" xml:space="preserve">
-    <value>Account Security</value>
-  </data>
   <data name="title" xml:space="preserve">
-    <value>Account Security</value>
-  </data>
-  <data name="tabSecurityKeys" xml:space="preserve">
-    <value>Security key</value>
-  </data>
-  <data name="tabLogInAttempts" xml:space="preserve">
     <value>Login history</value>
+  </data>
+  <data name="attempt_Action" xml:space="preserve">
+    <value>action</value>
+  </data>
+  <data name="attempt_DateTime" xml:space="preserve">
+    <value>date/time</value>
+  </data>
+  <data name="attempt_DetailsBtn" xml:space="preserve">
+    <value>Show details</value>
+  </data>
+  <data name="attempt_Device" xml:space="preserve">
+    <value>Device</value>
+  </data>
+  <data name="attempt_IpAddress" xml:space="preserve">
+    <value>IP address</value>
+  </data>
+  <data name="attempt_Method" xml:space="preserve">
+    <value>Login method</value>
+  </data>
+  <data name="removeAllBtn" xml:space="preserve">
+    <value>Remove all entries</value>
+  </data>
+  <data name="removeAllDialog" xml:space="preserve">
+    <value>Remove all login attempts</value>
+  </data>
+  <data name="removeAllDialog_Message" xml:space="preserve">
+    <value>All login attempts will be deleted. This action is irreversible. Existing sessions will not be affected, but some data about existing sessions will no longer be available. Are you sure you want to continue?</value>
+  </data>
+  <data name="removeAllError" xml:space="preserve">
+    <value>Error removing attempts</value>
+  </data>
+  <data name="removeAllSuccess" xml:space="preserve">
+    <value>All login attempts have been removed</value>
+  </data>
+  <data name="deviceUnknown" xml:space="preserve">
+    <value>Unknown</value>
+  </data>
+  <data name="deviceOn" xml:space="preserve">
+    <value>{0} on {1}</value>
+  </data>
+  <data name="loginAttempts" xml:space="preserve">
+    <value>login attempts</value>
+  </data>
+  <data name="attempt_Result" xml:space="preserve">
+    <value>Result</value>
+  </data>
+  <data name="result_Failed" xml:space="preserve">
+    <value>Failed</value>
+  </data>
+  <data name="result_Succeeded" xml:space="preserve">
+    <value>Successful</value>
+  </data>
+  <data name="result_TwoFactorRequired" xml:space="preserve">
+    <value>Waiting for 2FA</value>
+  </data>
+  <data name="loginMethod_Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="loginMethod_Passkey" xml:space="preserve">
+    <value>Passkey</value>
+  </data>
+  <data name="loginMethod_TwoFactorAuthenticator" xml:space="preserve">
+    <value>2FA via Authenticator app</value>
+  </data>
+  <data name="loginMethod_TwoFactorEmail" xml:space="preserve">
+    <value>2FA via email</value>
+  </data>
+  <data name="loginMethod_TwoFactorRecoveryCode" xml:space="preserve">
+    <value>2FA with recovery code</value>
+  </data>
+  <data name="loginMethod_TwoFactorSecurityKey" xml:space="preserve">
+    <value>2FA with security key</value>
   </data>
 </root>
