--- a/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityOverview.de.resx
+++ b/SchulCloud.Web/SchulCloud.Web/Localization/Components/Pages/Account/Security/SecurityOverview.de.resx
@@ -211,4 +211,10 @@
   <data name="recovery_RenewMessage" xml:space="preserve">
     <value>Durch das Generieren neuer Wiederherstellungscodes werden alle bestehenden ungültig. Wollen Sie wirklich fortfahren?</value>
   </data>
+  <data name="mfaForgetClient" xml:space="preserve">
+    <value>2FA-Client vergessen</value>
+  </data>
+  <data name="mfaForgetClient_Desc" xml:space="preserve">
+    <value>Bei der 2FA-Verifizierung können Sie auswählen, dass auf einem Gerät keine weiteren 2FA-Verifizierungen durchgeführt werden sollen. Mit dem betätigen dieser Schaltfläche machen Sie dies für dieses Gerät rückgängig.</value>
+  </data>
 </root>
