Added cookie consent and a privacy page -Feature: Added a cookie consent banner -Feature: Added a placeholder privacy page. -Feature: Adapted existing functionality cookies to the cookie consent. -Config: Disable compileOnSave in tsconfig.json to prevent generation of js files for every single ts file.

--- a/SchulCloud.Frontend/Localization/Components/Layouts/AnonymousLayout.en.resx
+++ b/SchulCloud.Frontend/Localization/Components/Layouts/AnonymousLayout.en.resx
@@ -109,4 +109,7 @@
   <data name="selectColorTheme_Dark" xml:space="preserve">
     <value>Dark</value>
   </data>
+  <data name="privacyLink" xml:space="preserve">
+    <value>Privacy Policy</value>
+  </data>
 </root>
