--- a/SchulCloud.Frontend/Localization/Components/Pages/Privacy.en.resx
+++ b/SchulCloud.Frontend/Localization/Components/Pages/Privacy.en.resx
@@ -97,19 +97,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="signInLink" xml:space="preserve">
-    <value>Anmelden</value>
-  </data>
-  <data name="selectColorTheme_Light" xml:space="preserve">
-    <value>Hell</value>
-  </data>
-  <data name="selectColorTheme_Dark" xml:space="preserve">
-    <value>Dunkel</value>
-  </data>
-  <data name="selectCulture_Auto" xml:space="preserve">
-    <value>Automatisch</value>
-  </data>
-  <data name="privacyLink" xml:space="preserve">
-    <value>Datenschutzrichtlinie</value>
+  <data name="title" xml:space="preserve">
+    <value>Privacy Policy</value>
   </data>
 </root>
