Added a simple view for api keys. -Feature: Addded a table view for api keys. -Style: Maked the security pages more consistent. -Fix: Fixed api key config and migration to allow null value to Expires.

--- a/SchulCloud.Frontend/Localization/Components/Layouts/PageLayouts/AccountSecurityLayout.de.resx
+++ b/SchulCloud.Frontend/Localization/Components/Layouts/PageLayouts/AccountSecurityLayout.de.resx
@@ -112,4 +112,7 @@
   <data name="tabLogInAttempts" xml:space="preserve">
     <value>Anmeldeverlauf</value>
   </data>
+  <data name="tabApiKeys" xml:space="preserve">
+    <value>API-Schlüssel</value>
+  </data>
 </root>
