--- a/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/SecurityKeys.en.resx
+++ b/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/SecurityKeys.en.resx
@@ -172,4 +172,7 @@
   <data name="removeDialog_Error" xml:space="preserve">
     <value>Error removing security key</value>
   </data>
+  <data name="title" xml:space="preserve">
+    <value>security keys</value>
+  </data>
 </root>
