--- a/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeys.en.resx
+++ b/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeys.en.resx
@@ -97,82 +97,37 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="registerBtn" xml:space="preserve">
-    <value>Sicherheitsschlüssel hinzufügen</value>
+  <data name="title" xml:space="preserve">
+    <value>API keys</value>
   </data>
-  <data name="securityKey_IsPasskey" xml:space="preserve">
-    <value>Passkey</value>
+  <data name="key_Created" xml:space="preserve">
+    <value>Created</value>
   </data>
-  <data name="securityKey_Added" xml:space="preserve">
-    <value>Hinzugefügt am: {0}</value>
+  <data name="key_Enabled" xml:space="preserve">
+    <value>Activated</value>
   </data>
-  <data name="securityKey_Desc" xml:space="preserve">
-    <value>Beschreibung: {0}</value>
+  <data name="key_Enabled_False" xml:space="preserve">
+    <value>Disabled</value>
   </data>
-  <data name="securityKey_Protocol" xml:space="preserve">
-    <value>Verwendetes Protokoll: {0}</value>
+  <data name="key_Enabled_True" xml:space="preserve">
+    <value>Active</value>
   </data>
-  <data name="securityKey_NoDesc" xml:space="preserve">
-    <value>Von diesem Sicherheitsschlüssel konnte keine Beschreibung abgerufen werden.</value>
+  <data name="key_Expires" xml:space="preserve">
+    <value>Expires</value>
   </data>
-  <data name="securityKey_RenameBtn" xml:space="preserve">
-    <value>Umbenennen</value>
+  <data name="key_Name" xml:space="preserve">
+    <value>Name</value>
   </data>
-  <data name="securityKey_RemoveBtn" xml:space="preserve">
-    <value>Entfernen</value>
+  <data name="key_Notes" xml:space="preserve">
+    <value>Notes</value>
   </data>
-  <data name="removeDialog" xml:space="preserve">
-    <value>Sicherheitsschlüssel entfernen</value>
+  <data name="key_Action" xml:space="preserve">
+    <value>action</value>
   </data>
-  <data name="removeDialog_Message" xml:space="preserve">
-    <value>Der Sicherheitsschlüssel wird dauerhaft von diesem Konto entfernt. Möchten Sie wirklich fortfahren?</value>
-  </data>
-  <data name="renameDialog" xml:space="preserve">
-    <value>Sicherheitsschlüssel umbenennen</value>
+  <data name="key_DetailsBtn" xml:space="preserve">
+    <value>Show details</value>
   </data>
   <data name="desc" xml:space="preserve">
-    <value>Sicherheitsschlüssel sind Anmeldedaten die auf einem Computer/Mobilgerät oder einem Hardware-Schlüssel gespeichert werden. Ein Sicherheitsschlüssel kann, wenn aktiviert für Zwei-Faktor-Authentifizierung (2FA) genutzt werden.</value>
-  </data>
-  <data name="desc_Passkey" xml:space="preserve">
-    <value>Ein Passkey ist ein Sicherheitsschlüssel, der für die benutzernamenlose Authentifizierung verwendet werden kann, da er bei seiner Erstellung eine erhöhte Sicherheit bietet.</value>
-  </data>
-  <data name="webAuthn_NotSupported" xml:space="preserve">
-    <value>Ihr Aktueller Browser unterstützt keine Sicherheitsschlüssel</value>
-  </data>
-  <data name="registerDialog" xml:space="preserve">
-    <value>Sicherheitsschlüssel hinzufügen</value>
-  </data>
-  <data name="registerDialog_KeyName" xml:space="preserve">
-    <value>Name des Sicherheitsschlüssels</value>
-  </data>
-  <data name="registerDialog_IsPasskey" xml:space="preserve">
-    <value>Als Passkey hinzufügen</value>
-  </data>
-  <data name="registerDialog_CancelBtn" xml:space="preserve">
-    <value>Abbrechen</value>
-  </data>
-  <data name="registerDialog_RegisterBtn" xml:space="preserve">
-    <value>Hinzufügen</value>
-  </data>
-  <data name="registerDIalog_Error" xml:space="preserve">
-    <value>Fehler beim Anfordern des Sicherheitsschlüssels</value>
-  </data>
-  <data name="registerDialog_SaveError" xml:space="preserve">
-    <value>Beim speichern des Sicherheitsschlüssels ist ein Fehler aufgetreten.</value>
-  </data>
-  <data name="form_NotEmpty" xml:space="preserve">
-    <value>Das Feld darf nicht leer sein</value>
-  </data>
-  <data name="registerModal_KeyName_AlreadyExists" xml:space="preserve">
-    <value>Ein anderer Sicherheitsschlüssel mit demselben Namen existiert bereits.</value>
-  </data>
-  <data name="renameDialog_Error" xml:space="preserve">
-    <value>Fehler beim ändern des Namens</value>
-  </data>
-  <data name="removeDialog_Error" xml:space="preserve">
-    <value>Fehler beim Entfernen des Sicherheitsschlüssels</value>
-  </data>
-  <data name="title" xml:space="preserve">
-    <value>Sicherheitsschlüssel</value>
+    <value>API keys can be used to request data from the various APIs on this website and to authenticate as you. You can assign certain permissions to each API key that are available to you. With such an API key it is possible to perform actions with your account without further verification, so take good care of your API keys.</value>
   </data>
 </root>
