--- a/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeyCreate.de.resx
+++ b/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeyCreate.de.resx
@@ -98,33 +98,69 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="title" xml:space="preserve">
-    <value>API-Schlüssel</value>
+    <value>API-Schlüssel erstellen</value>
   </data>
-  <data name="key_Name" xml:space="preserve">
+  <data name="form_Name_MustUnique" xml:space="preserve">
+    <value>Es gibt bereits einen API-Schlüssel mit diesem Namen</value>
+  </data>
+  <data name="form_Name" xml:space="preserve">
     <value>Name</value>
   </data>
-  <data name="key_Notes" xml:space="preserve">
+  <data name="form_Notes" xml:space="preserve">
     <value>Anmerkungen</value>
   </data>
-  <data name="key_Created" xml:space="preserve">
-    <value>Erstellt</value>
+  <data name="form_Required" xml:space="preserve">
+    <value>Das Feld darf nicht Leer sein</value>
   </data>
-  <data name="key_Expires" xml:space="preserve">
+  <data name="form_Expires" xml:space="preserve">
     <value>Läuft ab</value>
   </data>
-  <data name="key_Action" xml:space="preserve">
-    <value>Aktion</value>
+  <data name="form_Expires_ClearBtn" xml:space="preserve">
+    <value>Eingabe Leeren</value>
   </data>
-  <data name="key_DetailsBtn" xml:space="preserve">
-    <value>Details anzeigen</value>
+  <data name="permissions" xml:space="preserve">
+    <value>Berechtigungen</value>
   </data>
-  <data name="desc" xml:space="preserve">
-    <value>API-Schlüssel können verwendet werden um von den verschiedenen API's dieser Website daten abzufragen und sich als Sie zu authentifizieren. Sie können jedem API-Schlüssel bestimmte Berechtigungen, die ihnen zur Verfügung stehen, zuweisen. Mit einem solchen API-Schlüssel ist es möglich ohne weitere Überprüfungen Aktionen mit ihrem Konto durchzuführen, achten Sie deshalb gut auf Ihre API-Schlüssel.</value>
+  <data name="cancelBtn" xml:space="preserve">
+    <value>Abbrechen</value>
   </data>
-  <data name="createKeyBtn" xml:space="preserve">
-    <value>Neuen API-Schlüssel erstellen</value>
+  <data name="createBtn" xml:space="preserve">
+    <value>Erstellen</value>
   </data>
-  <data name="createKeyBtn_Disabled" xml:space="preserve">
-    <value>Sie haben die maximal Anzahl an API-Schlüsseln erreicht. Jeder Benutzer darf maximal {0} API-Schlüssel haben.</value>
+  <data name="form_Expires_MustInFuture" xml:space="preserve">
+    <value>Der Zeitpunkt darf nicht in der Vergangenheit sein</value>
+  </data>
+  <data name="form_Expires_Infinite" xml:space="preserve">
+    <value>Läuft nie ab</value>
+  </data>
+  <data name="confirmNeverExpire" xml:space="preserve">
+    <value>API-Schlüssel ohne Ablaufdatum</value>
+  </data>
+  <data name="confirmNeverExpire_Message" xml:space="preserve">
+    <value>Der API-Schlüssel den Sie erstellen besitzt kein Ablaufdatum, was diesen bis zur manuellen Löschung gültig macht. Es wird empfohlen ein Ablaufdatum festzulegen. Wollen Sie trotzdem fortfahren?</value>
+  </data>
+  <data name="createKey_Error" xml:space="preserve">
+    <value>Beim erstellen des API-Schlüssels ist ein unbekannter Fehler aufgetreten.</value>
+  </data>
+  <data name="showKeyDialog" xml:space="preserve">
+    <value>API-Schlüssel</value>
+  </data>
+  <data name="showKeyDialog_Message" xml:space="preserve">
+    <value>Dies ist der API-Schlüssel den Sie erstellt haben. Bewahren Sie diesen gut auf! Nachdem Sie 'Fertig' betätigen kann dieser nicht erneut angezeigt werden.</value>
+  </data>
+  <data name="showKeyDialog_DoneBtn" xml:space="preserve">
+    <value>Fertig</value>
+  </data>
+  <data name="showKeyDialog_DownloadBtn" xml:space="preserve">
+    <value>Schlüssel herunterladen</value>
+  </data>
+  <data name="noPermissions" xml:space="preserve">
+    <value>Keine Berechtigungen ausgewählt</value>
+  </data>
+  <data name="noPermissions_Message" xml:space="preserve">
+    <value>Um einen API-Schlüssel zu erstellen muss mindestens eine Berechtigung auf der Stufe Read oder höher ausgewählt sein.</value>
+  </data>
+  <data name="noPermissions_YesBtn" xml:space="preserve">
+    <value>Verstanden</value>
   </data>
 </root>
