Added all permissions mode to api keys -Feature: Added an AllPermissions mode to api keys. -Improvement: Removed enabled property form api keys and api keys maked immutable. -Config: Removed tsconfig.json and packages.json from build output.

--- a/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeyCreate.de.resx
+++ b/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeyCreate.de.resx
@@ -163,4 +163,10 @@
   <data name="noPermissions_YesBtn" xml:space="preserve">
     <value>Verstanden</value>
   </data>
+  <data name="permissions_All" xml:space="preserve">
+    <value>Alle Benutzer Berechtigungen</value>
+  </data>
+  <data name="permissions_All_Desc" xml:space="preserve">
+    <value>Dies stellt dem API-Schlüssel dieselben Berechtigungen wie ihnen zur Verfügung. Sollten Sie weitere Berechtigungen erhalten während der Schlüssel bereits existiert, erhält dieser diese auch.</value>
+  </data>
 </root>
