--- a/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeyDetails.de.resx
+++ b/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeyDetails.de.resx
@@ -127,4 +127,10 @@
   <data name="removeKey_Desc" xml:space="preserve">
     <value>Durch das entfernen dieses API-Schlüssels werden Anfragen, die mit diesem durchgeführt werden nicht mehr gültig sein. Der Schlüssel ist nicht widerherstellbar. Wollen Sie trotzdem fortfahren?</value>
   </data>
+  <data name="permissions_All" xml:space="preserve">
+    <value>Alle Benutzer Berechtigungen</value>
+  </data>
+  <data name="permissions_All_Desc" xml:space="preserve">
+    <value>Dies stellt dem API-Schlüssel dieselben Berechtigungen wie ihnen zur Verfügung. Sollten Sie weitere Berechtigungen erhalten während der Schlüssel bereits existiert, erhält dieser diese auch.</value>
+  </data>
 </root>
