Added link to the API docs to the view and some other changes -Feature: Added links to the API docs to the API keys page. -Feature: Maked the mappging of swagger enablable. -Improvement: Moved BasePath config into service defaults. -Fix: Fixed Fido2 Auth by adding the gateway ports to the origins.

--- a/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeys.de.resx
+++ b/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeys.de.resx
@@ -127,4 +127,7 @@
   <data name="createKeyBtn_Disabled" xml:space="preserve">
     <value>Sie haben die maximal Anzahl an API-Schlüsseln erreicht. Jeder Benutzer darf maximal {0} API-Schlüssel haben.</value>
   </data>
+  <data name="availableApis" xml:space="preserve">
+    <value>Verfügbare APIs</value>
+  </data>
 </root>
