--- a/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeys.en.resx
+++ b/SchulCloud.Frontend/Localization/Components/Pages/Account/Security/ApiKeys.en.resx
@@ -127,4 +127,7 @@
   <data name="createKeyBtn_Disabled" xml:space="preserve">
     <value>You have reached the maximum number of API keys. Each user can have a maximum of {0} API keys.</value>
   </data>
+  <data name="availableApis" xml:space="preserve">
+    <value>Available APIs</value>
+  </data>
 </root>
