--- a/SchulCloud.Frontend/Localization/Components/Layouts/AnonymousLayout.en.resx
+++ b/SchulCloud.Frontend/Localization/Components/Layouts/AnonymousLayout.en.resx
@@ -97,19 +97,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="selectCulture_Auto" xml:space="preserve">
+  <data name="culture_Auto" xml:space="preserve">
     <value>Automatically</value>
   </data>
   <data name="signInLink" xml:space="preserve">
     <value>sign in</value>
   </data>
-  <data name="selectColorTheme_Light" xml:space="preserve">
-    <value>Light</value>
-  </data>
-  <data name="selectColorTheme_Dark" xml:space="preserve">
-    <value>Dark</value>
-  </data>
   <data name="privacyLink" xml:space="preserve">
     <value>Privacy Policy</value>
+  </data>
+  <data name="theme_DarkMode" xml:space="preserve">
+    <value>dark</value>
+  </data>
+  <data name="theme_LightMode" xml:space="preserve">
+    <value>light</value>
+  </data>
+  <data name="theme_AutoMode" xml:space="preserve">
+    <value>automatic</value>
   </data>
 </root>
